[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI tool for processing large CSV files of biometric data"
authors = ["Rust CLI"]

[[bin]]
name = "rust-cli"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization / deserialization
serde = { version = "1.0", features = ["derive"] }

# CSV reading
csv = "1.3"

# Data-parallel iterators
rayon = "1.10"

# Human-readable error messages (ergonomic Result propagation)
anyhow = "1.0"

[dev-dependencies]
# Temporary files used in unit tests (processor.rs)
tempfile = "3.13"

[profile.release]
opt-level     = 3      # Maximum optimization
lto           = true   # Link-time optimization
codegen-units = 1      # Single codegen unit for better inlining
panic         = "abort" # Smaller binary, faster panics
strip         = true   # Strip debug symbols from release binary
